# generalstrikeusstats

./: .gitignore  README.md  RESULTS_2026-01-30.md  general_strike_data plus-fine-grained.csv  general_strike_data.csv  generate_all_plots.py  generate_all_plots_fine_grained.py  generate_plot.py  pyproject.toml  scrape_live_site.py  scrape_strike_data.py  scrape_strike_data_all.py  scrape_strike_data_simple.py  update_readme.py
.github/workflows/: daily-scrape.yml
