[project]
name = "generalstrikeus-scraper"
version = "1.0.0"
description = "Scrape historical General Strike US signup data from Wayback Machine archives"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.40.0",
]
